meilisearch-deploy: - add external dns(powerdns), external L4 load balancer(haproxy), internal dns(coredns + etcd), unify L7 reverse proxy (day1 traefik + consul label), internal reverse proxy (day2 traefik + docker label) - add meilisearch container image - add nomad job and related config

--- a/LocalWorkShop/Sync-OCIImage/Day2.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/Day2.jsonc
@@ -76,4 +76,11 @@
         "privateRepo": "oliver006/redis_exporter:v1.80.2-alpine",
         "description": "https://hub.docker.com/r/oliver006/redis_exporter/tags",
     },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "getmeili/meilisearch:v1.35.0",
+        "archive": "docker.io_getmeili_meilisearch_v1.35.0.tar",
+        "privateRepo": "getmeili/meilisearch:v1.35.0",
+        "description": "https://hub.docker.com/r/getmeili/meilisearch/tags",
+    },
 ]
