--- a/LocalWorkShop/Sync-OCIImage/CI.jsonc
+++ b/LocalWorkShop/Sync-OCIImage/CI.jsonc
@@ -6,4 +6,11 @@
         "privateRepo": "gitea/gitea:1.25.4-rootless",
         "description": "https://hub.docker.com/r/gitea/gitea",
     },
+    {
+        "publicRegistry": "docker.io",
+        "publicRepo": "gitblit/gitblit:1.10.0-rpc",
+        "archive": "docker.io_gitblit-gitblit_1.10.0-rpc.tar",
+        "privateRepo": "gitblit/gitblit:1.10.0-rpc",
+        "description": "https://hub.docker.com/r/gitblit/gitblit",
+    },
 ]
