gitblit-deploy: use gitblit instead of gitea, add gitblit related ldap group, update ldap config

--- a/TerraformWorkShop/Nomad/Jobs/gitblit/attachments/gitblit.properties
+++ b/TerraformWorkShop/Nomad/Jobs/gitblit/attachments/gitblit.properties
@@ -1,4 +1,21 @@
 # https://www.gitblit.com/properties.html
+
+# https://github.com/gitblit-org/gitblit-docker/blob/v1.10.0-1/Dockerfile#L136-L159
+# GITBLIT.PROPERTIES
+# Define your custom settings in this file and/or include settings defined in
+# other properties files.
+# NOTE: Gitblit will not automatically reload "included" properties.  Gitblit
+# only watches the "gitblit.properties" file for modifications.
+# Paths may be relative to the $${baseFolder} or they may be absolute.
+# ONLY append your custom settings files at the END of the "include" line.
+# The present files define the default settings for the docker container. If you
+# remove them or change the order, things may break.
+include = gitblit-docker.properties
+
+#
+# Define your overrides or custom settings below
+#
+
 # Specify the list of acceptable transports for pushes.
 # If this setting is empty, all transports are acceptable.
 #
@@ -7,6 +24,14 @@
 # SINCE 1.5.0
 # SPACE-DELIMITED
 git.acceptedPushTransports = HTTP SSH
+
+# e.g. realm.authenticationProviders = htpasswd windows
+#
+# SINCE 1.4.0
+# RESTART REQUIRED
+# SPACE-DELIMITED
+realm.authenticationProviders = ldap
+
 # https://www.gitblit.com/setup_authentication.html
 # URL of the LDAP server.
 # To use encrypted transport, use either ldaps:// URL for SSL or ldap+tls:// to
@@ -56,12 +81,12 @@ realm.ldap.accountBase = ou=people,dc=root,dc=sololab
 # Query pattern to use when searching for a user account. This may be any valid
 # LDAP query expression, including the standard (&) and (|) operators.
 #
-# Variables may be injected via the ${variableName} syntax.
+# Variables may be injected via the $${variableName} syntax.
 # Recognized variables are:
-# ${username} - The text entered as the user name
+# $${username} - The text entered as the user name
 #
 # SINCE 1.0.0
-realm.ldap.accountPattern = (&(objectClass=person)(memberOf=cn=sso_allow,ou=groups,dc=root,dc=sololab)(uid=${username}))
+realm.ldap.accountPattern = (&(objectClass=person)(memberOf=cn=app-gitblit-user,ou=groups,dc=root,dc=sololab)(uid=$${username}))
 
 # Root node for all LDAP groups to be used as Gitblit Teams
 #
@@ -76,17 +101,17 @@ realm.ldap.groupBase = ou=groups,dc=root,dc=sololab
 # Query pattern to use when searching for a team. This may be any valid
 # LDAP query expression, including the standard (&) and (|) operators.
 #
-# Variables may be injected via the ${variableName} syntax.
+# Variables may be injected via the $${variableName} syntax.
 # Recognized variables are:
-# ${username} - The text entered as the user name
-# ${dn} - The Distinguished Name of the user logged in
+# $${username} - The text entered as the user name
+# $${dn} - The Distinguished Name of the user logged in
 #
 # All attributes from the LDAP User record are available. For example, if a user
-# has an attribute "fullName" set to "John", "(fn=${fullName})" will be
+# has an attribute "fullName" set to "John", "(fn=$${fullName})" will be
 # translated to "(fn=John)".
 #
 # SINCE 1.0.0
-realm.ldap.groupMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-*)(|(memberUid={{username}})(member={{dn}})(uniqueMember={{dn}})))
+realm.ldap.groupMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-gitblit-*)(|(memberUid=$${username})(member=$${dn})(uniqueMember=$${dn})))
 
 # Filter criteria for empty LDAP groups
 #
@@ -95,7 +120,7 @@ realm.ldap.groupMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-*)(|(m
 #
 # default: (&(objectClass=group)(!(member=*)))
 # SINCE 1.4.0
-realm.ldap.groupEmptyMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-*)(!(member=*)))
+realm.ldap.groupEmptyMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-gitblit-*)(!(member=*)))
 
 # LDAP users or groups that should be given administrator privileges.
 #
@@ -114,11 +139,22 @@ realm.ldap.admins = @app-gitblit-admin
 #
 # This may be a single attribute, or a string of multiple attributes. Examples:
 # displayName - Uses the attribute 'displayName' on the user record
-# ${personalTitle}. ${givenName} ${surname} - Will concatenate the 3
+# $${personalTitle}. $${givenName} $${surname} - Will concatenate the 3
 # attributes together, with a '.' after personalTitle
 #
 # SINCE 1.0.0
 realm.ldap.displayName = mail
+
+# Defines whether to synchronize all LDAP users and teams into the user service
+# This requires either anonymous LDAP access or that a specific account is set
+# in realm.ldap.username and realm.ldap.password, that has permission to read
+# users and groups in LDAP.
+#
+# Valid values: true, false
+# If left blank, false is assumed
+#
+# SINCE 1.4.0
+realm.ldap.synchronize = true
 
 # Secure/SSL https port to serve. <= 0 disables this connector.
 # On Unix/Linux systems, ports < 1024 require root permissions.
@@ -153,3 +189,12 @@ server.redirectToHttpsPort = false
 #
 # SINCE 1.4.0
 web.canonicalUrl = https://gitblit.ci.sololab
+
+# Manually set the default timezone to be used by Gitblit for display in the
+# web ui. This value is independent of the JVM timezone. Specifying a blank
+# value will default to the JVM timezone.
+# e.g. America/New_York, US/Pacific, UTC, Europe/Berlin
+#
+# SINCE 0.9.0
+# RESTART REQUIRED
+web.timezone = Asia/Shanghai
