Day3-VM-Deploy-hyperv: add day3 vm instead of CI VM

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -37,6 +37,13 @@ Host Day2-FCOS
     IdentityFile ~/.ssh/vagrant
     Port 22
 
+Host Day3-FCOS
+    StrictHostKeyChecking no
+    HostName day3.node.consul
+    User podmgr
+    IdentityFile ~/.ssh/vagrant
+    Port 22
+
 Host InfSvc-Fedora
     HostName 192.168.255.31
     User vagrant
