gitblit-deploy-nomad-job: add memory limit, update groupMemberPattern

--- a/TerraformWorkShop/Nomad/Jobs/gitblit/attachments/gitblit.properties
+++ b/TerraformWorkShop/Nomad/Jobs/gitblit/attachments/gitblit.properties
@@ -111,7 +111,7 @@ realm.ldap.groupBase = ou=groups,dc=root,dc=sololab
 # translated to "(fn=John)".
 #
 # SINCE 1.0.0
-realm.ldap.groupMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-gitblit-*)(|(memberUid=$${username})(member=$${dn})(uniqueMember=$${dn})))
+realm.ldap.groupMemberPattern = (&(objectClass=groupOfUniqueNames)(cn=app-gitblit-*)(|(uniqueMember=$${dn})))
 
 # Filter criteria for empty LDAP groups
 #
